--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ header {
 }
 .banner {
   background-image: url(Images/1.png);
+  opacity: 0.9;
   height: 500px;
   width: 1100px;
   margin: 0 auto;
@@ -96,6 +97,7 @@ header {
   font-weight: 800;
   align-items: center;
   text-align: center;
+  padding-top: 120px;
 }
 .banner-content p {
   color: #fff;
@@ -111,7 +113,7 @@ header {
 .second {
   margin-top: 64px;
   color: rgba(19, 19, 24, 0.5);
-  border-radius:15px;
+  border-radius: 15px;
   background: rgba(255, 255, 255, 0.3);
   height: 45px;
   width: 700px;
@@ -119,9 +121,9 @@ header {
   display: flex;
   gap: 30px;
 }
-.third{
-    border-radius: 15px;
-    padding: 10px;
+.third {
+  border-radius: 15px;
+  padding: 10px;
 }
 .btn-primary {
   width: 150px;
@@ -129,7 +131,7 @@ header {
   color: #fff;
   border-radius: 15px;
   background: #ff5400;
-  border: 0 ;
+  border: 0;
 }
 .second-part {
   display: flex;
@@ -153,86 +155,244 @@ header {
   font-weight: 400;
   margin-bottom: 30px;
 }
-.second-one li{
-    color: rgba(19, 19, 24, 0.70);
-    font-size: 16px;
-    font-weight: 400;
-    margin-bottom: 20px;
+.second-one li {
+  color: rgba(19, 19, 24, 0.7);
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 20px;
 }
 
-.second-two img{
-    gap: 20px;
+.second-two img {
+  gap: 20px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.footer{
-    background-color: #c9c9c9;
+.places {
+  border-radius: 16px;
+  background: linear-gradient(
+      0deg,
+      rgba(68, 68, 73, 0.2) 0%,
+      rgba(19, 19, 24, 0.2) 100%
+    ),
+    url(<path-to-image>), lightgray 50% / cover no-repeat;
+}
+.third-two h3 {
+  color: #131318;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 800;
+  margin: 50px 0px;
 }
 
-
-.last-img{
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    font-size: 32px;
+.third-two p {
+  color: rgba(19, 19, 24, 0.7);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  width: 643px;
+  margin-left: 350px;
+  margin-bottom: 50px;
 }
-.dif-col{
-    color: #FF5400;
-font-size: 32px;
+
+.third-three {
+  display: flex;
+  width: 570px;
+  height: 250px;
+  gap: 20px;
+  margin: 20px 100px 20px 180px;
+}
+
+.fourth img {
+  height: 64px;
+  width: 64px;
+}
+.fourth-one h3 {
+  color: #131318;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 800;
+  margin: 30px 0px;
+}
+
+.fourth-one p {
+  width: 643px;
+  color: rgba(19, 19, 24, 0.7);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  margin-left: 350px;
+  margin-bottom: 50px;
+}
+.fourth-one-main {
+  display: flex;
+}
+
+.fourth-two,
+.fourth-fourth {
+  border-radius: 16px;
+  border: 1px solid rgba(251, 181, 99, 0.2);
+  background: rgba(251, 181, 99, 0.05);
+  width: 573px;
+  height: 284px;
+  flex-shrink: 0;
+  padding: 25px;
+}
+.fourth-three {
+  border-radius: 16px;
+  border: 1px solid rgba(41, 206, 246, 0.2);
+  background: rgba(41, 206, 246, 0.05);
+  width: 573px;
+  height: 284px;
+  flex-shrink: 0;
+  padding: 20px;
+}
+.fourth-fourth {
+  margin: 30px 450px;
+}
+.fourth-one-main {
+  margin-top: 30px;
+  margin-left: 120px;
+  gap: 10px;
+}
+.form-fill {
+  background: #f3f3f3;
+  width: 1440px;
+  height: 380px;
+  padding: 30px;
+  margin-right: 5px;
+}
+.form-fill h3 {
+  color: #131318;
+  font-size: 24px;
+  font-weight: 800;
+}
+.form-fill p {
+  width: 350px;
+  color: #5a5a5d;
+  font-size: 16px;
+  font-weight: 400;
+}
+.form-fill input {
+  margin-top: 15px;
+  border-radius: 10px;
+  width: 393px;
+  height: 52px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: rgba(19, 19, 24, 0.05);
+  border: 0;
+}
+.form-fill button {
+  margin-top: 10px;
+  width: 393px;
+  height: 52px;
+  flex-shrink: 0;
+  border-radius: 5px;
+}
+.save {
+  width:200px;
+  height: 80px;
+  transform: rotate(-19.628deg);
+  flex-shrink: 0;
+  border-radius: 16px;
+  background: #ff5400;
+  margin-left: -100px;
+  margin-top: 250px;
+  padding: 22px;
+}
+.save p{
+  color: #FFF;
+text-align: center;
+font-size: 20px;
+font-weight: 400;
+}
+.save h3{
+  color: #FFF;
+font-size: 25px;
 font-weight: 800;
 }
-
-.last-p{
-    width: 769px;
-    color: #5A5A5D;
-text-align: center;
-font-size: 16px;
-font-weight: 400;
-margin-left: 300px;
+  .form-image {
+    width: 350px;
+    height: 300px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+    position: relative;
+    margin-right: 60px;
+  }
+.newsletter {
+  display: flex;
+  margin: 15px 200px;
+  background: #e7e7e7;
 }
-@media screen and (max-width:600px) {
-
-    .banner{
-        width: 335px;
-        height: 483px;
-    }
-    .second {
-        margin-top: 64px;
-        color: rgba(19, 19, 24, 0.5);
-        border-radius: 15px;
-        background: rgba(255, 255, 255, 0.3);
-        height: 45px;
-        /* width: 700px; */
-        /* margin-left: 250px; */
-        display: flex;
-        flex-direction: column;
-        gap: 18px;
-        flex-direction: column;
-        width: 200px;
-        margin-left: 40px;
-    }
-    .banner-content p {
-        width: 330px;
-        margin-left: 0;
-    }
-    .second-part{
-        flex-direction: column;
-        grid: template columns 1fr;
-        margin-left: 0;
-    }
+.footer {
+  background-color: #c9c9c9;
 }
 
+.last-img {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  font-size: 32px;
+}
+.dif-col {
+  color: #ff5400;
+  font-size: 32px;
+  font-weight: 800;
+}
 
+.last-p {
+  width: 769px;
+  color: #5a5a5d;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  margin-left: 300px;
+}
+.last-one-icon {
+  padding-top: 50px;
+  margin-left: 600px;
+  margin-right: 20px;
+  margin-bottom: 30px;
+}
+
+hr {
+  margin-left: 250px;
+  width: 872px;
+  height: 1px;
+  background: rgba(19, 19, 24, 0.1);
+  margin-bottom: 30px;
+}
+
+.last-foot {
+  margin-left: 490px;
+}
+@media screen and (max-width: 600px) {
+  .banner {
+    width: 335px;
+    height: 483px;
+  }
+  .second {
+    margin-top: 64px;
+    color: rgba(19, 19, 24, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.3);
+    height: 45px;
+    /* width: 700px; */
+    /* margin-left: 250px; */
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    flex-direction: column;
+    width: 200px;
+    margin-left: 40px;
+  }
+  .banner-content p {
+    width: 330px;
+    margin-left: 0;
+  }
+  .second-part {
+    flex-direction: column;
+    grid: template columns 1fr;
+    margin-left: 0;
+  }
+}
