--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 .logo {
   display: flex;
+  margin-left: 50px;
 }
 .logo img {
   width: 48px;
@@ -18,6 +19,9 @@
   font-size: 36px;
   font-weight: 800;
   color: #131318;
+}
+nav{
+  margin-bottom: 50px;
 }
 .travel {
   font-size: 36px;
@@ -133,6 +137,10 @@ header {
   background: #ff5400;
   border: 0;
 }
+.btn-primary:hover{
+  background-color: black;
+  color: white;
+}
 .second-part {
   display: flex;
   margin-top: 100px;
@@ -231,31 +239,31 @@ header {
   border-radius: 16px;
   border: 1px solid rgba(251, 181, 99, 0.2);
   background: rgba(251, 181, 99, 0.05);
-  width: 573px;
-  height: 284px;
+  width: 560px;
+  height: 270px;
   flex-shrink: 0;
-  padding: 25px;
+  padding: 20px;
 }
 .fourth-three {
   border-radius: 16px;
   border: 1px solid rgba(41, 206, 246, 0.2);
   background: rgba(41, 206, 246, 0.05);
-  width: 573px;
-  height: 284px;
+  width: 540px;
+  height: 270px;
   flex-shrink: 0;
   padding: 20px;
 }
 .fourth-fourth {
-  margin: 30px 450px;
+  margin: 30px 420px;
 }
 .fourth-one-main {
   margin-top: 30px;
-  margin-left: 120px;
+  margin-left: 100px;
   gap: 10px;
 }
 .form-fill {
   background: #f3f3f3;
-  width: 1440px;
+  width: 500px;
   height: 380px;
   padding: 30px;
   margin-right: 5px;
@@ -321,7 +329,7 @@ font-weight: 800;
   }
 .newsletter {
   display: flex;
-  margin: 15px 200px;
+  margin: 15px 150px;
   background: #e7e7e7;
 }
 .footer {
@@ -362,7 +370,12 @@ hr {
   background: rgba(19, 19, 24, 0.1);
   margin-bottom: 30px;
 }
-
+.last-img {
+  padding-top:50px;
+}
+.last-p{
+  margin-top: 15px;
+}
 .last-foot {
   margin-left: 490px;
 }
