--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ header {
 }
 .navbar {
   display: flex;
-  width: 100%;
   height: 60px;
   max-width: 1200px;
   margin: 0 auto;
@@ -384,28 +383,27 @@ hr {
     width: 335px;
     height: 483px;
   }
-  .second {
-    margin-top: 64px;
-    color: rgba(19, 19, 24, 0.5);
-    border-radius: 15px;
-    background: rgba(255, 255, 255, 0.3);
-    height: 45px;
-    /* width: 700px; */
-    /* margin-left: 250px; */
+  .banner-content h3{
+    padding-top: 30px;
+  }
+  .btn-primary{
+    width: 100%;
+  }
+  .navbar{
     display: flex;
     flex-direction: column;
-    gap: 18px;
-    flex-direction: column;
-    width: 200px;
-    margin-left: 40px;
   }
   .banner-content p {
-    width: 330px;
     margin-left: 0;
   }
-  .second-part {
+  .second{
+    display: flex;
+    margin-top: 0;
     flex-direction: column;
-    grid: template columns 1fr;
-    margin-left: 0;
+    width: 100%;
+    margin-left: 2px;
+    gap: 10px;
+    height: 10px;
+    margin-top: 0;
   }
 }
