--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   font-weight: 800;
   color: #131318;
 }
-nav{
+nav {
   margin-bottom: 50px;
 }
 .travel {
@@ -136,7 +136,7 @@ header {
   background: #ff5400;
   border: 0;
 }
-.btn-primary:hover{
+.btn-primary:hover {
   background-color: black;
   color: white;
 }
@@ -206,6 +206,7 @@ header {
   height: 250px;
   gap: 20px;
   margin: 20px 100px 20px 180px;
+  
 }
 
 .fourth img {
@@ -296,7 +297,7 @@ header {
   border-radius: 5px;
 }
 .save {
-  width:200px;
+  width: 200px;
   height: 80px;
   transform: rotate(-19.628deg);
   flex-shrink: 0;
@@ -306,26 +307,26 @@ header {
   margin-top: 250px;
   padding: 22px;
 }
-.save p{
-  color: #FFF;
-text-align: center;
-font-size: 20px;
-font-weight: 400;
+.save p {
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
 }
-.save h3{
-  color: #FFF;
-font-size: 25px;
-font-weight: 800;
+.save h3 {
+  color: #fff;
+  font-size: 25px;
+  font-weight: 800;
 }
-  .form-image {
-    width: 350px;
-    height: 300px;
-    flex-shrink: 0;
-    border-radius: 16px;
-    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
-    position: relative;
-    margin-right: 60px;
-  }
+.form-image {
+  width: 350px;
+  height: 300px;
+  flex-shrink: 0;
+  border-radius: 16px;
+  background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+  position: relative;
+  margin-right: 60px;
+}
 .newsletter {
   display: flex;
   margin: 15px 150px;
@@ -370,9 +371,9 @@ hr {
   margin-bottom: 30px;
 }
 .last-img {
-  padding-top:50px;
+  padding-top: 50px;
 }
-.last-p{
+.last-p {
   margin-top: 15px;
 }
 .last-foot {
@@ -383,27 +384,114 @@ hr {
     width: 335px;
     height: 483px;
   }
-  .banner-content h3{
+
+  .menu {
+    content: url("/Images/Vector.png");
+  }
+
+  .navbar {
+    display: flex;
+  }
+  .banner-content h3 {
     padding-top: 30px;
   }
-  .btn-primary{
+  .btn-primary {
     width: 100%;
   }
-  .navbar{
+  .navbar {
     display: flex;
     flex-direction: column;
+    max-width: 100vw;
+  }
+  .second-part {
+    flex-direction: column;
+    margin-left: 0px;
+    width: 335px;
+    height: 342px;
+    flex-shrink: 0;
+    margin-bottom: 250px;
   }
   .banner-content p {
     margin-left: 0;
   }
-  .second{
+  .second {
     display: flex;
     margin-top: 0;
     flex-direction: column;
-    width: 100%;
-    margin-left: 2px;
+    max-width: 300px;
+    margin-left:10px;
     gap: 10px;
     height: 10px;
     margin-top: 0;
+  }
+  .second-part{
+    display: flex;
+    flex-direction: column;
+    margin-left: 130px;
+  }
+  .third-two h3{
+    font-size: 16px;
+    margin: 557px 0px;
+  }
+  .third-two p {
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    width: 280px;
+    margin-left: 202px;
+    margin-top: 0px;
+  }
+  .second-two img {
+    height: 300px;
+    width: 327px;
+  }
+  .third-three img{
+    height: 150px;
+    width: 150px;
+  }
+  .fourth-one-main{
+    display: flex;
+    flex-direction: column;
+  }
+  .fourth-one p{
+    margin-left: 115px;
+    width: 520px;
+  }
+  .fourth-fourth{
+    margin-left: 115px;
+  }
+  .save{
+    margin-left: 0;
+    padding: 22px;
+    height: 60px;
+  }
+  .form-image {
+    height: 32px;
+    margin-left: -13px;
+  }
+  .newsletter{
+    display: flex;
+    flex-direction: column;
+  }
+  .last-p {
+    width: 100vw;
+    color: #5a5a5d;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    margin-left: 0;
+}
+  .last-one-icon {
+    padding-top: 50px;
+    margin-left: 196px;
+}
+  .last-foot{
+    margin-left: 0;
+  }
+  .footer{
+    background-color: #9e9e9e;
+    max-width: 100vw;
+    margin-top: 60px;
+    margin-left: 136px;
   }
 }
