--- a/style.css
+++ b/style.css
@@ -182,6 +182,10 @@ header {
     ),
     url(<path-to-image>), lightgray 50% / cover no-repeat;
 }
+.places img{
+  margin-left: 70px;
+  gap: 30px;
+}
 .third-two h3 {
   color: #131318;
   text-align: center;
@@ -206,9 +210,11 @@ header {
   height: 250px;
   gap: 20px;
   margin: 20px 100px 20px 180px;
-  
 }
-
+.third-three-two img{
+  margin-left: 50px;
+  width: 374px;
+}
 .fourth img {
   height: 64px;
   width: 64px;
@@ -383,6 +389,7 @@ hr {
   .banner {
     width: 335px;
     height: 483px;
+    margin-left: 117px;
   }
 
   .menu {
@@ -391,6 +398,7 @@ hr {
 
   .navbar {
     display: flex;
+    margin-left: 33px;
   }
   .banner-content h3 {
     padding-top: 30px;
@@ -424,6 +432,9 @@ hr {
     height: 10px;
     margin-top: 0;
   }
+  .second-one{
+    margin-left:0px;
+  }
   .second-part{
     display: flex;
     flex-direction: column;
@@ -431,45 +442,108 @@ hr {
   }
   .third-two h3{
     font-size: 16px;
-    margin: 557px 0px;
+    margin:550px 0px;
+    margin-left: 32px;
   }
   .third-two p {
     text-align: center;
     font-size: 14px;
     font-weight: 400;
     width: 280px;
-    margin-left: 202px;
+    margin-left: 130px;
     margin-top: 0px;
   }
   .second-two img {
     height: 300px;
     width: 327px;
   }
+  .places{
+    margin-left:142px;
+    width: 341px;
+    height: 1193px;
+  }
+  .places img{
+    width: 250px;
+  }
+  .third-three{
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
+  }
   .third-three img{
     height: 150px;
-    width: 150px;
+    width: 250px;
+  }
+  .fourth{
+    margin-top: 477px;
+  }
+  .fourth-one{
+    margin-top: 0px;
   }
   .fourth-one-main{
     display: flex;
     flex-direction: column;
+    margin-left: 135px;
   }
   .fourth-one p{
-    margin-left: 115px;
-    width: 520px;
+    margin-left: 150px;
+    width: 340px;
+  }
+  .fourth-one h3{
+    font-size: 35px;
+    margin: 30px 0px;
+    margin-left:140px;
+  }
+  .fourth-two{
+    margin-left: 20px;
+  }
+  .fourth-two p{
+    width: 350px;
+    margin-top: 10px;
+  }
+  .fourth-three{
+    margin-left: 20px;
+  }
+  .fourth-three p{
+    width: 400px;
+    margin-top: 10px;
   }
   .fourth-fourth{
-    margin-left: 115px;
+    margin-left: 160px;
+    width: 400px;
+  }
+  .fourth-fourth p{
+    margin-top: 15px;
   }
   .save{
-    margin-left: 0;
     padding: 22px;
-    height: 60px;
+    height: 38px;
+    width: 120px;
+    margin-left: 124px;
+    margin-top: -126px;
   }
-  .form-image {
-    height: 32px;
-    margin-left: -13px;
+  .save p{
+    font-size: 13px;
+    margin-top: -12px;
+  }
+  .save h3{
+    font-size: 18px;
+    text-align: center;
+  }
+  .form-image{
+    margin-top: 24px;
+    width: 430px;
+    height: 310px;
+  }
+  .form-image img {
+    margin-left:10px;
+    width: 400px;
+    margin-top: 46px;
+    margin-bottom: 100px;
   }
   .newsletter{
+    height: 500px;
+    width: 350px;
     display: flex;
     flex-direction: column;
   }
@@ -490,8 +564,12 @@ hr {
   }
   .footer{
     background-color: #9e9e9e;
-    max-width: 100vw;
-    margin-top: 60px;
-    margin-left: 136px;
+    width: 594px;
+    margin-top: 222px;
+    margin-left: 154px;
+  }
+  .footer hr{
+    width: 500px;
+    margin-left: 35px;
   }
 }
