--- a/style.css
+++ b/style.css
@@ -386,6 +386,9 @@ hr {
   margin-left: 490px;
 }
 @media screen and (max-width: 600px) {
+  body{
+    margin: 0px 25px;
+  }
   .banner {
     width: 335px;
     height: 483px;
@@ -398,7 +401,7 @@ hr {
 
   .navbar {
     display: flex;
-    margin-left: 33px;
+    margin-left: -81px;
   }
   .banner-content h3 {
     padding-top: 30px;
@@ -421,6 +424,8 @@ hr {
   }
   .banner-content p {
     margin-left: 0;
+    width: 330px;
+    margin-bottom: 56px;
   }
   .second {
     display: flex;
@@ -442,15 +447,18 @@ hr {
   }
   .third-two h3{
     font-size: 16px;
-    margin:550px 0px;
-    margin-left: 32px;
+    margin-top: 550px;
+    margin-left: -10px;
+  }
+  .btn-primary{
+    margin-bottom: 18px;
   }
   .third-two p {
     text-align: center;
     font-size: 14px;
     font-weight: 400;
     width: 280px;
-    margin-left: 130px;
+    margin-left: 150px;
     margin-top: 0px;
   }
   .second-two img {
@@ -470,12 +478,18 @@ hr {
     flex-direction: column;
     margin-left: 40px;
   }
+  .third-three-one{
+    margin-left: -18px;
+  }
+  .third-three-three{
+    margin-left: -18px;
+  }
   .third-three img{
     height: 150px;
     width: 250px;
   }
   .fourth{
-    margin-top: 477px;
+    margin-top: 40px;
   }
   .fourth-one{
     margin-top: 0px;
@@ -492,10 +506,11 @@ hr {
   .fourth-one h3{
     font-size: 35px;
     margin: 30px 0px;
-    margin-left:140px;
+    margin-left:50px;
   }
   .fourth-two{
     margin-left: 20px;
+    width: 400px;
   }
   .fourth-two p{
     width: 350px;
@@ -503,6 +518,7 @@ hr {
   }
   .fourth-three{
     margin-left: 20px;
+    width: 400px;
   }
   .fourth-three p{
     width: 400px;
@@ -519,8 +535,8 @@ hr {
     padding: 22px;
     height: 38px;
     width: 120px;
-    margin-left: 124px;
-    margin-top: -126px;
+    margin-left: 256px;
+    margin-top: -143px;
   }
   .save p{
     font-size: 13px;
@@ -532,14 +548,16 @@ hr {
   }
   .form-image{
     margin-top: 24px;
-    width: 430px;
+    width: 460px;
     height: 310px;
   }
   .form-image img {
-    margin-left:10px;
-    width: 400px;
-    margin-top: 46px;
-    margin-bottom: 100px;
+    margin-left: 50px;
+    width: 380px;
+    margin-top: 37px;
+  }
+  .form-fill{
+    width: 395px;
   }
   .newsletter{
     height: 500px;
@@ -557,19 +575,23 @@ hr {
 }
   .last-one-icon {
     padding-top: 50px;
-    margin-left: 196px;
-}
+    margin-left: 140px;
+  }
   .last-foot{
     margin-left: 0;
   }
   .footer{
     background-color: #9e9e9e;
-    width: 594px;
-    margin-top: 222px;
-    margin-left: 154px;
+    width: 460px;
+    margin-top: 236px;
+    margin-left: 153px;
+  }
+  .last-p{
+    width: 460px;
+    text-align: center;
   }
   .footer hr{
-    width: 500px;
+    width: 387px;
     margin-left: 35px;
   }
 }
