--- a/style.css
+++ b/style.css
@@ -411,8 +411,11 @@ hr {
   }
   .navbar {
     display: flex;
-    flex-direction: column;
-    max-width: 100vw;
+    max-width: 490px;
+    margin-left: 14px;
+  }
+  .menu{
+    margin-right: 35px;
   }
   .second-part {
     flex-direction: column;
@@ -447,8 +450,10 @@ hr {
   }
   .third-two h3{
     font-size: 16px;
-    margin-top: 550px;
-    margin-left: -10px;
+    width: 146px;
+    height: 18px;
+    margin-top: 560px;
+    margin-left: 216px;
   }
   .btn-primary{
     margin-bottom: 18px;
@@ -504,9 +509,10 @@ hr {
     width: 340px;
   }
   .fourth-one h3{
-    font-size: 35px;
+    font-size: 33px;
     margin: 30px 0px;
-    margin-left:50px;
+    margin-left: 161px;
+    width: 259px;
   }
   .fourth-two{
     margin-left: 20px;
